<resources>
    <string name="app_name">Tracne</string>
    <string name="format_template_type">Type: %s</string>
    <string name="not_written_an_entry">You haven\'t written an entry today.\nClick here to log your progress</string>
    <string name="all_done">All done! Have a great day</string>
    <string name="mood_guiding_question">How are you feeling today?</string>
    <string name="sleep_guiding_question">How long did you sleep last night?</string>
    <string name="spots_guiding_question">How many new spots do you notice?</string>
    <string name="rating_guiding_question">Rate your skin right now</string>
    <string name="add_entry">Add entry</string>
    <string name="update_entry">Update entry</string>
    <string name="add_template">Add template</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="min_default_value">0</string>
    <string name="max_default_value">10</string>
    <string name="guiding_question">Guiding question</string>
    <string name="type">Type</string>
    <string name="yes_no">Yes-No</string>
    <string name="numeric">Numeric</string>
    <string name="slider">Slider</string>
    <string name="label">Label</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log">Log</string>
    <string name="statistics">Statistics</string>
    <string name="mar_11_to_apr_5">Mar. 11 — Apr. 5</string>

    <string name="date_range">%1$s — %2$s</string>

    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>

    <string name="data">Data</string>
    <string name="date">Date</string>

    <string name="compare_to">Compare to</string>
    <string name="compare_to_ellipsis">Compare to…</string>
    <string name="tap_to_select">(Tap to select)</string>
    <string name="none">None</string>
</resources>